amend some type and add config to gitignore

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "siewla",
     "password": null,
-    "database": "Final-project",
+    "database": "finalproject",
     "host": "localhost",
     "dialect": "postgres"
   },
